--- a/webapps/ROOT/assets/css/style.css
+++ b/webapps/ROOT/assets/css/style.css
@@ -34,6 +34,8 @@
 .menuReStartBtn > span {position:relative; top:5px}
 .menuSelectBtn{border-top:1px solid #f0f1f4; width:100%; height:30px;}
 .menuSelectBtn > span {position:relative; top:4px}
+.ttsMicBlack{background: url("../image/chatbotStyle/micBlack.png");width:100px;height:100px;position:absolute;bottom:45px;right:5px;cursor:pointer}
+.ttsMicRed{background: url("../image/chatbotStyle/micRed.png");width:100px;height:100px;position:absolute;bottom:45px;right:5px;cursor:pointer}
 
 /* media Icon */
 .playImg {background: url("../image/chatbotStyle/ico_play_50.png");width:50px;height:50px;transition:.5s ease;opacity:1;position:absolute;top:25%;left:50%;transform:translate(-50%, -50%);-ms-transform: translate(-50%, -50%);cursor:pointer}
