--- a/webapps/ROOT/assets/css/botchat.css
+++ b/webapps/ROOT/assets/css/botchat.css
@@ -25,7 +25,7 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea div {
   visibility: hidden; }
 
 .wc-header {
-  background-color: #302f35;
+  /*background-color: #302f35;*/
   box-shadow: 0 1px rgba(0, 0, 0, 0.2);
   box-sizing: content-box;
   color: #ffffff;
@@ -44,17 +44,18 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea div {
   margin-bottom: 10px; }
 
 .wc-message-groups {
-  bottom: 50px;
-  left: 0;
-  transform: translateY(0);
-  overflow-x: hidden;
-  overflow-y: scroll;
-  padding: 10px;
-  position: absolute;
-  right: 0;
-  top: 38px;
-  transition: transform 0.2s cubic-bezier(0, 0, 0.5, 1); 
-  background-color:#F2F3F7
+    bottom: 100px;
+    left: 0;
+    transform: translateY(0);
+    overflow-x: hidden;
+    overflow-y: hidden;
+    padding: 10px;
+    position: absolute;
+    right: 0;
+    top: 38px;
+    margin-left: 100px;
+    font-size: 20px;
+    transition: transform 0.2s cubic-bezier(0, 0, 0.5, 1);
 }
   .wc-message-groups.no-header {
     top: 0; }
@@ -123,23 +124,30 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea div {
   height: 40px; }
 
 .wc-console {
-  /*border: 5px solid #dbdee1;*/
-  background-color:#fff;
-  bottom: 0;
-  box-sizing: border-box;
-  height: 50px;
-  left: 0;
-  position: absolute;
-  right: 0; }
+    /*border: 5px solid #dbdee1;*/
+    /*background-color:#fff;
+        box-sizing: border-box;
+    */
+    bottom: 0;
+    height: 100px;
+    left: 0;
+    position: absolute;
+    right: 0;
+    margin-bottom: 15px;
+    top: 800px;
+}
 
 /* views */
 .wc-chatview-panel {
-  width:380px;
-  height:528px;
-  overflow: hidden;
-  position: absolute;
-  right: 0;
-  bottom: 0; }
+    width: 700px;
+    height: 900px;
+    overflow: hidden;
+    position: absolute;
+    left: 500px;
+    top: 900px;
+    bottom: 0px;
+    z-index: 100000;
+}
 
 /* messages */
 .wc-message-wrapper {
@@ -176,7 +184,8 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea div {
 }
 
 .wc-message-content {
-  word-break: break-word; }
+  word-break: break-word; 
+}
 
 .wc-message-content.clickable {
   cursor: pointer; }
@@ -394,8 +403,8 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea div {
 .wc-message-from-me svg.wc-message-callout {
   right: -6px; }
 
-.wc-message-from-me .wc-message-content span{font-size:14px;color:#fff;line-height:15px;}
-.wc-message-from-me .wc-message-content span > span{display: block;padding:10px;background:#00aad2;border-radius:5px;}
+.wc-message-from-me .wc-message-content span{font-size:14px;color:#fff;line-height:30px;}
+.wc-message-from-me .wc-message-content span > span{display: block;padding:20px;background:#00aad2;border-radius:50px;font-size:20px;}
 
 /* from bot */
 .wc-message-from-bot {
@@ -404,7 +413,8 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea div {
 
 .wc-message-from-bot .wc-message-content {
   /*background-color: #FFF;*/
-  color: #000000; }
+  color: #000000; 
+}
 
 .wc-message-from-bot svg.wc-message-callout path {
   fill: #eceff1; }
@@ -440,16 +450,22 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea div {
   margin: 11px; }
 
 .wc-console textarea, .wc-console input[type=text] {
-  border: none;
-  height: 100%;
-  outline: none;
-  padding: 0;
-  resize: none;
-  width: 100%; }
+    border: none;
+    height: 100%;
+    outline: none;
+    padding: 0;
+    resize: none;
+    width: 100%;
+    border-radius: 50px;
+    border: none;
+    box-shadow: 2px 3px 4px #9a9a9a;
+    font-size: 20px;
+    padding-left: 40px;
+}
 
 .wc-send svg {
-  height: 18px;
-  width: 27px; }
+  height: 71px;
+  width: 71px; }
 
 .wc-upload svg {
   height: 18px;
@@ -459,9 +475,12 @@ body .wc-app, .wc-app button, .wc-app input, .wc-app textarea div {
   display: none; }
 
 .wc-textbox {
-  bottom: 0;
-  left: 60px;
-  right: 110px; }
+    bottom: 0;
+    left: 150px;
+    top: 20px;
+    right: 110px;
+    
+}
 
 .wc-send {
   right: 0; }
