--- a/webapps/ROOT/assets/css/style.css
+++ b/webapps/ROOT/assets/css/style.css
@@ -24,10 +24,11 @@
     margin-bottom: 18px;
     background-color: #fff;
     border-radius: 50px;
+    width: 400px;
 }
 .timeStampBot{font-size: 12px; color: #868a8f;line-height: 15px; text-align: left; background: #f1f3f6;padding-top: 3px !important; position:absolute; bottom:0}
 .timeStampUser{font-size: 12px;color: #868a8f;line-height: 15px;text-align: right;padding-top:3px !important}
-.ac-container{padding:6px 6px 6px 12px !important; border-radius:5px; max-width:312px;}
+.ac-container{padding:6px 6px 6px 12px !important; border-radius:5px; max-width:400px;}
 
 /* chat input */
 .wc-menu{cursor: pointer;display: inline-block;width:60px;height: 50px;background-color: #fff;}
@@ -39,7 +40,7 @@
     height: 71px;
     position: absolute;
     margin-top: 25px;
-    right: 130px;
+    right: 40px;
     z-index: 200000;
 }
 .menuBox{background-color:#fff;width:250px;height:62px;position:absolute;bottom:53px;display:none;text-align:center;box-shadow: 0 1px 10px 0 rgba(0,0,0,0.30);border: 1px solid #CCC; border-radius: 4px;}
